--- a/addons/csi/openstack/snapshot-webhook.yaml
+++ b/addons/csi/openstack/snapshot-webhook.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 # Sourced from:
-# - https://github.com/kubernetes-csi/external-snapshotter/blob/v5.0.1/deploy/kubernetes/webhook-example/webhook.yaml
+# - https://github.com/kubernetes-csi/external-snapshotter/blob/v6.2.2/deploy/kubernetes/webhook-example/webhook.yaml
 # Modifications:
 #   - change namespace
 #   - template function to replace base registry
@@ -46,11 +46,11 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-validation
-          image: '{{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.0.1" }}' # change the image if you wish to use your own custom validation server image
+          image: '{{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.2.1" }}'
           imagePullPolicy: IfNotPresent
           args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem']
           ports:
-            - containerPort: 443 # change the port as needed
+            - containerPort: 443
           volumeMounts:
             - name: snapshot-validation-webhook-certs
               mountPath: /etc/snapshot-validation-webhook/certs
@@ -70,8 +70,8 @@ spec:
     app: snapshot-validation
   ports:
     - protocol: TCP
-      port: 443 # Change if needed
-      targetPort: 443 # Change if the webserver image expects a different port
+      port: 443
+      targetPort: 443
 ---
 apiVersion: v1
 kind: ServiceAccount
