--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -17,16 +17,19 @@
 {{ if eq .Cluster.CloudProviderName "openstack" }}
 {{ $csiImage := "UNSUPPORTED" }}
 {{ if eq .Cluster.MajorMinorVersion "1.24" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.24.6"}}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.24.6" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.25.5"}}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.25.5" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.26.2"}}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.26.2" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1"}}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.28" }}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1" }}
 {{ end }}
 {{ if not (eq $csiImage "UNSUPPORTED") }}
 ---
