add missing cluster-autoscaler release for Kubernetes 1.27

--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -14,13 +14,16 @@
 
 {{ $version := "UNSUPPORTED" }}
 {{ if eq .Cluster.MajorMinorVersion "1.24" }}
-{{ $version = "v1.24.1"}}
+{{ $version = "v1.24.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
-{{ $version = "v1.25.1"}}
+{{ $version = "v1.25.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
-{{ $version = "v1.26.2"}}
+{{ $version = "v1.26.2" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.27" }}
+{{ $version = "v1.27.3" }}
 {{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
