--- a/addons/csi/azure-file/csi-azurefile-driver.yaml
+++ b/addons/csi/azure-file/csi-azurefile-driver.yaml
@@ -19,6 +19,15 @@
 
 {{ $version := "UNSUPPORTED" }}
 {{ $snapshot := "UNSUPPORTED" }}
+
+{{ if eq .Cluster.MajorMinorVersion "1.25" }}
+{{ $version = "v1.25.1" }}
+{{ $snapshot = "v5.0.1" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.26" }}
+{{ $version = "v1.26.5" }}
+{{ $snapshot = "v5.0.1" }}
+{{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
 {{ $version = "v1.27.1" }}
 {{ $snapshot = "v5.0.1" }}
