--- a/addons/csi/azure-file/csi-azurefile-node.yaml
+++ b/addons/csi/azure-file/csi-azurefile-node.yaml
@@ -23,6 +23,13 @@
 {{ if eq .Cluster.CloudProviderName "azure" }}
 
 {{ $version := "UNSUPPORTED" }}
+
+{{ if eq .Cluster.MajorMinorVersion "1.25" }}
+{{ $version = "v1.25.1" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.26" }}
+{{ $version = "v1.26.5" }}
+{{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
 {{ $version = "v1.27.1" }}
 {{ end }}
