--- a/addons/csi/openstack/controllerplugin-rbac.yaml
+++ b/addons/csi/openstack/controllerplugin-rbac.yaml
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+#
+# Sourced from:
+# https://github.com/kubernetes/cloud-provider-openstack/blob/v1.28.0/manifests/cinder-csi-plugin/cinder-csi-controllerplugin-rbac.yaml
+#
+
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "openstack" }}
 apiVersion: v1
