--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+#
+# Sourced from:
+# https://github.com/kubernetes/cloud-provider-openstack/blob/v1.28.0/manifests/cinder-csi-plugin/cinder-csi-nodeplugin.yaml
+#
+
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 
 {{ if eq .Cluster.CloudProviderName "openstack" }}
@@ -20,16 +25,16 @@
 {{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.24.6" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.25" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.25.5" }}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.25.6" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.26.2" }}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.26.3" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
 {{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.28" }}
-{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1" }}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.28.0" }}
 {{ end }}
 {{ if not (eq $csiImage "UNSUPPORTED") }}
 ---
