re-enable VPA in e2e tests

--- a/hack/ci/testdata/kubermatic.yaml
+++ b/hack/ci/testdata/kubermatic.yaml
@@ -30,3 +30,6 @@ spec:
   featureGates:
     EtcdLauncher: true
     HeadlessInstallation: true
+    # VPA won't do anything useful due to missing Prometheus, but we can
+    # at least ensure we deploy a working set of Deployments.
+    VerticalPodAutoscaler: true
