add dex frontend issuer to configmap
Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

--- a/charts/oauth/templates/configmap.yaml
+++ b/charts/oauth/templates/configmap.yaml
@@ -34,6 +34,9 @@ data:
     frontend:
       dir: /srv/dex/web
       logoURL: theme/logo.svg
+{{- if .Values.dex.frontend }}{{- if .Values.dex.frontend.issuer }}
+      issuer: {{ .Values.dex.frontend.issuer }}
+{{- end }}{{- end }}
     telemetry:
       http: 0.0.0.0:5558
 {{ if .Values.dex.expiry }}
