Add dex frontend issuer to configmap (#12608)
* add dex frontend issuer to configmap

Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

* simplify if-condition

Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

* update fixtures

Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

---------

Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

--- a/charts/oauth/templates/configmap.yaml
+++ b/charts/oauth/templates/configmap.yaml
@@ -34,6 +34,7 @@ data:
     frontend:
       dir: /srv/dex/web
       logoURL: theme/logo.svg
+      issuer: {{ ((.Values.dex).frontend).issuer | default "dex" }}
     telemetry:
       http: 0.0.0.0:5558
 {{ if .Values.dex.expiry }}
