Support for configuring OIDC username and group prefix for user clusters
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1920,11 +1920,15 @@ spec:
                       type: string
                     groupsClaim:
                       type: string
+                    groupsPrefix:
+                      type: string
                     issuerURL:
                       type: string
                     requiredClaim:
                       type: string
                     usernameClaim:
+                      type: string
+                    usernamePrefix:
                       type: string
                   type: object
                 opaIntegration:
