--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1915,11 +1915,15 @@ spec:
                       type: string
                     groupsClaim:
                       type: string
+                    groupsPrefix:
+                      type: string
                     issuerURL:
                       type: string
                     requiredClaim:
                       type: string
                     usernameClaim:
+                      type: string
+                    usernamePrefix:
                       type: string
                   type: object
                 opaIntegration:
