Fixed descriptions for Cluster Spec and added few missing descriptions of other specs
Signed-off-by: archups <archupsawant@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
@@ -34,7 +34,7 @@ spec:
             metadata:
               type: object
             spec:
-              description: AddonConfigSpec specifies configuration of addon.
+              description: Spec describes the configuration of an addon.
               properties:
                 description:
                   description: Description of the configured addon, it will be displayed in the addon overview in the UI
