--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplateinstances.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplateinstances.yaml
@@ -43,7 +43,7 @@ spec:
             metadata:
               type: object
             spec:
-              description: ClusterTemplateInstanceSpec specifies the data for cluster instances.
+              description: Spec specifies the data for cluster instances.
               properties:
                 clusterTemplateID:
                   type: string
