Added Missing Description to the CRDs Spec (#12663)
* Added Missing Description to the Cluster Spec

Signed-off-by: archups <archupsawant@gmail.com>

* Fixing build issue

Signed-off-by: archups <archupsawant@gmail.com>

* Fixed descriptions for Cluster Spec and added few missing descriptions of other specs

Signed-off-by: archups <archupsawant@gmail.com>

* Fixed formatting errors

Signed-off-by: archups <archupsawant@gmail.com>

* Fixed descriptions as per review comments

Signed-off-by: archups <archupsawant@gmail.com>

* Fixed descriptions as per the review comments

Signed-off-by: archups <archupsawant@gmail.com>

---------

Signed-off-by: archups <archupsawant@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_constrainttemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_constrainttemplates.yaml
@@ -34,7 +34,7 @@ spec:
             metadata:
               type: object
             spec:
-              description: ConstraintTemplateSpec is the object representing the gatekeeper constraint template spec and kubermatic related spec.
+              description: Spec specifies the gatekeeper constraint template and KKP related spec.
               properties:
                 crd:
                   properties:
@@ -63,7 +63,7 @@ spec:
                       type: object
                   type: object
                 selector:
-                  description: ConstraintTemplateSelector is the object holding the cluster selection filters.
+                  description: Selector configures which clusters this constraint template is applied to.
                   properties:
                     labelSelector:
                       description: LabelSelector selects the Clusters to which the Constraint Template applies based on their labels
