--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -211,7 +211,7 @@ spec:
                             description: 'Optional: KubeLB holds the configuration for the kubeLB at the data center level.'
                             properties:
                               enabled:
-                                description: Enabled is a flag to enable/disable kubeLB for the datacenter.
+                                description: Enabled is used to enable/disable kubeLB for the datacenter. This is used to control whether installing kubelb is allowed or not for the datacenter.
                                 type: boolean
                               kubeconfig:
                                 description: Kubeconfig is reference to the Kubeconfig for the kubeLB management cluster.
