Remove omitempty from cluster.spec.kubelb.enabled
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1803,6 +1803,8 @@ spec:
                     enabled:
                       description: Controls whether kubeLB is deployed or not.
                       type: boolean
+                  required:
+                    - enabled
                   type: object
                 kubernetesDashboard:
                   description: KubernetesDashboard holds the configuration for the kubernetes-dashboard component.
