--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -101,6 +101,9 @@ spec:
                           x-kubernetes-int-or-string: true
                       type: object
                   type: object
+                disableAdminKubeconfig:
+                  description: DisableAdminKubeconfig disables the admin kubeconfig functionality on the dashboard.
+                  type: boolean
                 disableChangelogPopup:
                   description: DisableChangelogPopup disables the changelog popup in KKP dashboard.
                   type: boolean
